crates/id_effect/tests/ui/ctx_macro.rs
fn main() {
  id_effect::ctx!(Db => ());
}
